# meshtastic-ble-proxy

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: nrf52840dk_nrf52840.overlay
docs/: ARCHITECTURE.md  CLIENT-INTEGRATION.md  architecture.md  client-integration.md  reconnect-persistence.md  uart-dma-rx-latency.es.md
src/: ble_gatt.c  ble_gatt.h  config_cache.c  config_cache.h  main.c  proto_handler.c  proto_handler.h  proto_handler_test.c  proxy_protocol.c  proxy_protocol.h  route_trace.h  router.c  router.h  uart_meshtastic.c  uart_meshtastic.h  upstream_session.c  upstream_session.h
tests/: config_cache_segment_test.c  config_cache_test.c  proto_handler_test.c
tools/meshtastic/: README.md  check_node_info.py  configure.py  configure_node.py  configure_params.py  fetch_node_config.py  param_node.py  radio_config.py  requirements.txt
